// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment Question component 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-mockViewState is-mode-practice is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <form
        className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-scored"
        data-focussed={false}
        data-id="mc-assessment-id"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment"
        id="obo-mc-assessment-id"
        onChange={[Function]}
        onSubmit={[Function]}
        tabIndex={-1}
      >
        <fieldset>
          <legend
            className="instructions"
          >
            <span
              className="for-screen-reader-only"
            >
              Multiple choice form with 0 choices. 
            </span>
            <span>
              Pick the correct answer
            </span>
          </legend>
          <div
            role="radiogroup"
          >
            <div
              className="for-screen-reader-only"
              tabIndex="-1"
            >
              <div
                className="result-container"
              >
                <p
                  className="result incorrect"
                >
                  Incorrect - You received a undefined% on this question.
                </p>
              </div>
            </div>
          </div>
          <div
            className="submit-and-result-container"
          >
            <div
              className="submit"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
              >
                <button
                  aria-label="Try Question Again"
                  className="button"
                  onClick={[Function]}
                >
                  Try Again
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              className="result-container"
            >
              <p
                className="result incorrect"
              >
                Incorrect
              </p>
            </div>
          </div>
          <div>
            <div
              className="solution"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
              >
                <button
                  className="button"
                  onClick={[Function]}
                >
                  Read an explanation of the answer
                </button>
              </div>
              <div />
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          aria-label="Try Question"
          className="button"
          disabled={true}
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component answered correctly 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-mockViewState is-mode-practice is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <form
        className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-scored"
        data-focussed={false}
        data-id="mc-assessment-id"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment"
        id="obo-mc-assessment-id"
        onChange={[Function]}
        onSubmit={[Function]}
        tabIndex={-1}
      >
        <fieldset>
          <legend
            className="instructions"
          >
            <span
              className="for-screen-reader-only"
            >
              Multiple choice form with 0 choices. 
            </span>
            <span>
              Pick the correct answer
            </span>
          </legend>
          <div
            role="radiogroup"
          >
            <div
              className="for-screen-reader-only"
              tabIndex="-1"
            >
              <div
                className="result-container"
              >
                <p
                  className="result incorrect"
                >
                  Incorrect - You received a undefined% on this question.
                </p>
              </div>
            </div>
          </div>
          <div
            className="submit-and-result-container"
          >
            <div
              className="submit"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
              >
                <button
                  aria-label="Try Question Again"
                  className="button"
                  onClick={[Function]}
                >
                  Try Again
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              className="result-container"
            >
              <p
                className="result incorrect"
              >
                Incorrect
              </p>
            </div>
          </div>
          <div>
            <div
              className="solution"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
              >
                <button
                  className="button"
                  onClick={[Function]}
                >
                  Read an explanation of the answer
                </button>
              </div>
              <div />
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          aria-label="Try Question"
          className="button"
          disabled={true}
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component answered incorrectly 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-mockViewState is-mode-practice is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <form
        className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-scored"
        data-focussed={false}
        data-id="mc-assessment-id"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment"
        id="obo-mc-assessment-id"
        onChange={[Function]}
        onSubmit={[Function]}
        tabIndex={-1}
      >
        <fieldset>
          <legend
            className="instructions"
          >
            <span
              className="for-screen-reader-only"
            >
              Multiple choice form with 0 choices. 
            </span>
            <span>
              Pick the correct answer
            </span>
          </legend>
          <div
            role="radiogroup"
          >
            <div
              className="for-screen-reader-only"
              tabIndex="-1"
            >
              <div
                className="result-container"
              >
                <p
                  className="result incorrect"
                >
                  Incorrect - You received a undefined% on this question.
                </p>
              </div>
            </div>
          </div>
          <div
            className="submit-and-result-container"
          >
            <div
              className="submit"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
              >
                <button
                  aria-label="Try Question Again"
                  className="button"
                  onClick={[Function]}
                >
                  Try Again
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              className="result-container"
            >
              <p
                className="result incorrect"
              >
                Incorrect
              </p>
            </div>
          </div>
          <div>
            <div
              className="solution"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
              >
                <button
                  className="button"
                  onClick={[Function]}
                >
                  Read an explanation of the answer
                </button>
              </div>
              <div />
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          aria-label="Try Question"
          className="button"
          disabled={true}
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component in practice mode 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-mockViewState is-mode-practice is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <form
        className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-scored"
        data-focussed={false}
        data-id="mc-assessment-id"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment"
        id="obo-mc-assessment-id"
        onChange={[Function]}
        onSubmit={[Function]}
        tabIndex={-1}
      >
        <fieldset>
          <legend
            className="instructions"
          >
            <span
              className="for-screen-reader-only"
            >
              Multiple choice form with 0 choices. 
            </span>
            <span>
              Pick the correct answer
            </span>
          </legend>
          <div
            role="radiogroup"
          >
            <div
              className="for-screen-reader-only"
              tabIndex="-1"
            >
              <div
                className="result-container"
              >
                <p
                  className="result incorrect"
                >
                  Incorrect - You received a undefined% on this question.
                </p>
              </div>
            </div>
          </div>
          <div
            className="submit-and-result-container"
          >
            <div
              className="submit"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
              >
                <button
                  aria-label="Try Question Again"
                  className="button"
                  onClick={[Function]}
                >
                  Try Again
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              className="result-container"
            >
              <p
                className="result incorrect"
              >
                Incorrect
              </p>
            </div>
          </div>
          <div>
            <div
              className="solution"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
              >
                <button
                  className="button"
                  onClick={[Function]}
                >
                  Read an explanation of the answer
                </button>
              </div>
              <div />
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          aria-label="Try Question"
          className="button"
          disabled={true}
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component in review mode 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-active is-mode-review is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <form
        className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-not-correct is-not-showing-explanation is-scored"
        data-focussed={false}
        data-id="mc-assessment-id"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment"
        id="obo-mc-assessment-id"
        onChange={null}
        onSubmit={[Function]}
        tabIndex={-1}
      >
        <fieldset>
          <legend
            className="instructions"
          >
            <span
              className="for-screen-reader-only"
            >
              Multiple choice form with 0 choices. 
            </span>
            <span>
              Pick the correct answer
            </span>
          </legend>
          <div
            role="radiogroup"
          >
            <div
              className="for-screen-reader-only"
              tabIndex="-1"
            >
              <div
                className="result-container"
              >
                <p
                  className="result incorrect"
                >
                  Incorrect - You received a undefined% on this question.
                </p>
              </div>
            </div>
          </div>
          <div
            className="submit-and-result-container"
          >
            <div
              aria-hidden="true"
              className="result-container"
            >
              <p
                className="result incorrect"
              >
                Incorrect
              </p>
            </div>
          </div>
          <div>
            <div
              className="solution"
            >
              <div
                className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
              >
                <button
                  className="button"
                  onClick={[Function]}
                >
                  Read an explanation of the answer
                </button>
              </div>
              <div />
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          disabled={true}
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component with content only 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-practice"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`MCAssessment Question component with content only in review mode 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-review"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--mc-question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;
